fix: fix responsiveness on mobile screens

--- a/trilha-thomas/src/app/components/pages/about/about.responsive.scss
+++ b/trilha-thomas/src/app/components/pages/about/about.responsive.scss
@@ -1,7 +1,14 @@
-//chartjs não aceita valores relativos
+@import "../../../scss/variables.scss";
+@import "../../../scss/animations.scss";
+
 @media (min-width: 270px) {
   .about-section {
     width: 100%;
+  }
+  .about-section__content {
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
   }
 
   .info-container {
@@ -14,11 +21,59 @@
   }
 
   .about-text {
-    max-height: 25vh;
-    overflow: auto;
+    padding: 10px;
+    font-style: italic;
+    font-size: 1rem;
+    font-weight: 100;
+    width: 100%;
+    padding: 10px;
+    position: relative;
+  }
+
+  .scrollable-box {
+    max-height: 30vh;
+    padding: 10px;
+    font-style: italic;
+
     width: 100%;
     font-size: 1rem;
-    padding: 10px;
+    font-weight: 100;
+    z-index: -1;
+    display: flex;
+    overflow: auto;
+
+    p {
+      font-size: 1rem;
+    }
+  }
+
+  .shadow {
+    position: absolute;
+    z-index: 30000000;
+    top: 85%;
+    left: 0;
+    width: 100%;
+    height: rem-calc(30);
+    background: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.2),
+      rgba(0, 0, 0, 1)
+    );
+
+    pointer-events: none;
+
+    &::after {
+      content: "↓";
+      position: absolute;
+      font-size: 20px;
+      font-weight: bold;
+      color: #fff;
+      bottom: px;
+      left: 50%;
+      transform: translateX(-50%);
+      pointer-events: none;
+      animation: arrowDown 1s alternate infinite;
+    }
   }
 
   .timeline-container {
@@ -34,7 +89,6 @@
 
 @media (min-width: 375px) {
   .about-text {
-    box-shadow: inset 0px -66px 58px -41px rgba(17, 16, 16, 0.8);
     font-size: 1.3rem;
   }
 }
@@ -44,10 +98,13 @@
     flex-direction: row;
   }
   .about-text {
-    width: 40%;
+    width: 90%;
+    p {
+      font-size: 1.5rem;
+    }
   }
 
-  .external-content {
+  .about-section__content {
     display: flex;
     flex-direction: column;
   }
@@ -58,6 +115,9 @@
     h1 {
       margin-top: 48px;
     }
+  }
+  .about-text {
+    width: 50%;
   }
   .skills-container {
     width: 40%;
